--- a/Styles/LightTheme.xaml
+++ b/Styles/LightTheme.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
     <Style x:Key="Background" TargetType="Grid">
         <Setter Property="Background">
             <Setter.Value>
@@ -220,7 +221,8 @@
         <Setter Property="ItemContainerStyle">
             <Setter.Value>
                 <Style TargetType="{x:Type ListViewItem}">
-                    <Setter Property="Height" Value="120"/>
+                    
+                    
                     <Setter Property="FontSize" Value="20"/>
                     <Setter Property="Background" Value="Transparent"/>
                     <Setter Property="BorderThickness" Value="0"/>
@@ -231,11 +233,11 @@
                             <ControlTemplate TargetType="{x:Type ListViewItem}">
                                 <Border Background="{TemplateBinding Background}"
                                         BorderBrush="{TemplateBinding BorderBrush}"
-                                        BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="16">
+                                        BorderThickness="{TemplateBinding BorderThickness}" MaxHeight="350" MaxWidth="300" CornerRadius="16" x:Name="border">
                                     <!--<GridViewRowPresenter Content="{TemplateBinding Content}"
                                                           Columns="{TemplateBinding GridView.ColumnCollection}"/>-->
                                     <StackPanel>
-                                        <Border CornerRadius="16" Width="171" Height="96">
+                                        <Border CornerRadius="16" Width="{Binding Path=ActualWidth, ElementName=border}" Height="{Binding Path=ActualWidth, ElementName=border}">
                                             <Border.Background>
                                                 <ImageBrush  ImageSource="/Resources/Dark/Dark Theme.png" Stretch="UniformToFill"/>
                                             </Border.Background>
