--- a/Styles/LightTheme.xaml
+++ b/Styles/LightTheme.xaml
@@ -1,6 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:converters="clr-namespace:Melista.Converters">
-
+    
+    <converters:ListItemWidthConverter x:Key="ListItemWidthConverter"></converters:ListItemWidthConverter>
+    <converters:ListItemHeightConverter x:Key="ListItemHeightConverter"></converters:ListItemHeightConverter>
+    
     <Style x:Key="Background" TargetType="Grid">
         <Setter Property="Background">
             <Setter.Value>
@@ -122,19 +125,6 @@
         </Style.Triggers>
     </Style>
 
-    <!--<Style TargetType="ComboBoxItem">
-        <Setter Property="Background" Value="Red"/>
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="ComboBoxItem">
-                    
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>-->
-
-
-
     <Style x:Key="DropDownGrid" TargetType="Grid">
         <Setter Property="Background" Value="Transparent"/>
         <Style.Triggers>
@@ -150,64 +140,10 @@
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Background" Value="Transparent"/>
                 <Setter Property="Foreground" Value="#7F000000"/>
-
             </Trigger>
         </Style.Triggers>
     </Style>
-
-    <Style x:Key="ListViewItems" TargetType="ListView">
-        <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="BorderThickness" Value="0"/>
-        <!--<Setter Property="ItemTemplate">
-            <Setter.Value>
-                <DataTemplate>
-                    <Border x:Name="FirstBord" Background="White" CornerRadius="16" Height="120" Width="171">
-                        <StackPanel>
-                            <Border CornerRadius="16" Width="171" Height="96">
-                                <Border.Background>
-                                    <ImageBrush  ImageSource="/Resources/Dark/Dark Theme.png" Stretch="UniformToFill"/>
-                                </Border.Background>
-                            </Border>
-                            <TextBlock Style="{DynamicResource TextStyle2}" FontSize="8" Margin="6 6 6 0" Text="Billie Eilish - when the party's over"/>
-                        </StackPanel>
-                    </Border>
-                </DataTemplate>
-            </Setter.Value>
-        </Setter>-->
-        <Setter Property="ItemContainerStyle">
-            <Setter.Value>
-                <Style TargetType="{x:Type ListViewItem}">
-                    <Setter Property="Template">
-                        <Setter.Value>
-                            <ControlTemplate TargetType="{x:Type ListViewItem}">
-                                <Border x:Name="FirstBord" Background="White" CornerRadius="16" Height="120" Width="171">
-                                    <StackPanel>
-                                        <Border CornerRadius="16" Width="171" Height="96">
-                                            <Border.Background>
-                                                <ImageBrush  ImageSource="/Resources/Dark/Dark Theme.png" Stretch="UniformToFill"/>
-                                            </Border.Background>
-                                        </Border>
-                                        <TextBlock Style="{DynamicResource TextStyle2}" FontSize="8" Margin="6 6 6 0" Text="Billie Eilish - when the party's over"/>
-                                    </StackPanel>
-                                </Border>
-                            </ControlTemplate>
-                        </Setter.Value>
-                    </Setter>
-                    <Style.Triggers>
-                        <!--<Trigger Property="ItemsControl.AlternationIndex" Value="1">
-                            <Setter Property="Background" Value="#ddd"/>
-                        </Trigger>-->
-                        <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" Value="#FFC34D"/>
-                        </Trigger>
-                    </Style.Triggers>
-
-                </Style>
-            </Setter.Value>
-        </Setter>
-    </Style>
-    <converters:ListItemWidthConverter x:Key="ListItemWidthConverter"></converters:ListItemWidthConverter>
-    <converters:ListItemHeightConverter x:Key="ListItemHeightConverter"></converters:ListItemHeightConverter>
+    
     <Style TargetType="{x:Type ListView}">
         <Setter Property="TextBlock.TextAlignment" Value="Center"/>
         <Setter Property="Margin" Value="5"/>
@@ -218,12 +154,11 @@
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled"/>
         <Setter Property="ScrollViewer.CanContentScroll" Value="True"/>
-        <!--ListViewItem template-->
         <Setter Property="ItemContainerStyle">
             <Setter.Value>
                 <Style TargetType="{x:Type ListViewItem}">
-                    
-                    
+
+
                     <Setter Property="FontSize" Value="20"/>
                     <Setter Property="Background" Value="White"/>
                     <Setter Property="BorderThickness" Value="0"/>
@@ -235,8 +170,6 @@
                                 <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}"
                                         BorderThickness="{TemplateBinding BorderThickness}" MaxHeight="350" MaxWidth="300" 
                                         CornerRadius="16" Margin="15" x:Name="border">
-                                    <!--<GridViewRowPresenter Content="{TemplateBinding Content}"
-                                                          Columns="{TemplateBinding GridView.ColumnCollection}"/>-->
                                     <StackPanel>
                                         <Border CornerRadius="16"  Height="{Binding Path=ActualWidth, ElementName=border,Converter={StaticResource ListItemHeightConverter}}" Width="{Binding Path=ActualWidth, ElementName=border}">
                                             <Border.Background>
@@ -261,20 +194,81 @@
         </Setter>
     </Style>
 
-    <!--<Style x:Key="LVItem" TargetType="{x:Type ListViewItem}">
+    <Style x:Key="ScrollThumbs" TargetType="{x:Type Thumb}">
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type ListViewItem}">
-                    <Border x:Name="Bd" Background="Transparent" BorderThickness="0">
-                        <ContentPresenter Margin="0" HorizontalAlignment="Center" VerticalAlignment="Center" />
-                    </Border>
-                    --><!--<ControlTemplate.Triggers>
-                        <Trigger Property="Border.IsMouseOver" Value="true">
-                            <Setter TargetName="Bd" Property="Background" Value="Red"/>
+                <ControlTemplate>
+                    <Grid x:Name="Grid">
+                        <Rectangle HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="Auto"
+                                   Height="Auto" Fill="Transparent"/>
+                        <Border x:Name="Rectangle1" CornerRadius="5" HorizontalAlignment="Stretch"
+                                VerticalAlignment="Stretch" Width="Auto" Height="Auto"
+                                Background="{TemplateBinding Background}"/>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="Tag" Value="Horizontal">
+                            <Setter TargetName="Rectangle1" Property="Width" Value="Auto"/>
+                            <Setter TargetName="Rectangle1" Property="Height" Value="7"/>
                         </Trigger>
-                    </ControlTemplate.Triggers>--><!--
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-    </Style>-->
+    </Style>
+
+    <Style x:Key="{x:Type ScrollBar}" TargetType="{x:Type ScrollBar}">
+        <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
+        <Setter Property="Foreground" Value="#7F1F93E5"/>
+        <Setter Property="Background" Value="white"/>
+        <Setter Property="Width" Value="10"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ScrollBar}">
+                    <Border x:Name="GridRoot" Width="12" Background="White" CornerRadius="5">
+                        <Track x:Name="PART_Track" Grid.Row="0" IsDirectionReversed="true" Focusable="False">
+                            <Track.Thumb>
+                                <Thumb x:Name="Thumb" Background="{TemplateBinding Foreground}" Style="{DynamicResource ScrollThumbs}"/>
+                            </Track.Thumb>
+                            <Track.IncreaseRepeatButton>
+                                <RepeatButton x:Name="PageUp" Command="ScrollBar.PageDownCommand" Opacity="0" Focusable="False"/>
+                            </Track.IncreaseRepeatButton>
+                            <Track.DecreaseRepeatButton>
+                                <RepeatButton x:Name="PageDown" Command="ScrollBar.PageUpCommand" Opacity="0" Focusable="False"/>
+                            </Track.DecreaseRepeatButton>
+                        </Track>
+                    </Border>
+
+                    <ControlTemplate.Triggers>
+                        <Trigger SourceName="Thumb" Property="IsMouseOver" Value="true">
+                            <Setter Value="#1F93E5" TargetName="Thumb" Property="Background"/>
+                        </Trigger>
+                        <Trigger SourceName="Thumb" Property="IsDragging" Value="true">
+                            <Setter Value="#1F93E5" TargetName="Thumb" Property="Background"/>
+                        </Trigger>
+
+                        <Trigger Property="IsEnabled" Value="false">
+                            <Setter TargetName="Thumb" Property="Visibility" Value="Collapsed"/>
+                        </Trigger>
+                        <Trigger Property="Orientation" Value="Horizontal">
+                            <Setter TargetName="GridRoot" Property="LayoutTransform">
+                                <Setter.Value>
+                                    <RotateTransform Angle="-90"/>
+                                </Setter.Value>
+                            </Setter>
+                            <Setter TargetName="PART_Track" Property="LayoutTransform">
+                                <Setter.Value>
+                                    <RotateTransform Angle="-90"/>
+                                </Setter.Value>
+                            </Setter>
+                            <Setter Property="Width" Value="Auto"/>
+                            <Setter Property="Height" Value="10"/>
+                            <Setter TargetName="Thumb" Property="Tag" Value="Horizontal"/>
+                            <Setter TargetName="PageDown" Property="Command" Value="ScrollBar.PageLeftCommand"/>
+                            <Setter TargetName="PageUp" Property="Command" Value="ScrollBar.PageRightCommand"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
