--- a/Styles/DarkTheme.xaml
+++ b/Styles/DarkTheme.xaml
@@ -148,7 +148,7 @@
         <Setter Property="TextBlock.TextAlignment" Value="Center"/>
         <Setter Property="Margin" Value="5"/>
         <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="Foreground" Value="#414141"/>
+        <Setter Property="Foreground" Value="White"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="SelectionMode" Value="Single"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
@@ -160,7 +160,7 @@
 
 
                     <Setter Property="FontSize" Value="20"/>
-                    <Setter Property="Background" Value="White"/>
+                    <Setter Property="Background" Value="#414141"/>
                     <Setter Property="BorderThickness" Value="0"/>
                     <Setter Property="HorizontalContentAlignment" Value="Center"/>
                     <Setter Property="VerticalContentAlignment" Value="Center"/>
@@ -185,8 +185,8 @@
                     </Setter>
                     <Style.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" Value="#414141"/>
-                            <Setter Property="Foreground" Value="White"/>
+                            <Setter Property="Background" Value="White"/>
+                            <Setter Property="Foreground" Value="#414141"/>
                         </Trigger>
                     </Style.Triggers>
                 </Style>
@@ -219,12 +219,12 @@
     <Style x:Key="{x:Type ScrollBar}" TargetType="{x:Type ScrollBar}">
         <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
         <Setter Property="Foreground" Value="#7F1F93E5"/>
-        <Setter Property="Background" Value="white"/>
+        <Setter Property="Background" Value="#414141"/>
         <Setter Property="Width" Value="10"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ScrollBar}">
-                    <Border x:Name="GridRoot" Width="12" Background="White" CornerRadius="5">
+                    <Border x:Name="GridRoot" Width="12" Background="#414141" CornerRadius="5">
                         <Track x:Name="PART_Track" Grid.Row="0" IsDirectionReversed="true" Focusable="False">
                             <Track.Thumb>
                                 <Thumb x:Name="Thumb" Background="{TemplateBinding Foreground}" Style="{DynamicResource ScrollThumbs}"/>
