--- a/Styles/DarkTheme.xaml
+++ b/Styles/DarkTheme.xaml
@@ -65,6 +65,13 @@
     <Style x:Key="BottomPanel" TargetType="Grid">
         <Setter Property="Background" Value="#4C000000"/>
     </Style>
+    <Style x:Key="RightPanel" TargetType="Grid">
+        <Setter Property="Background">
+            <Setter.Value>
+                <SolidColorBrush Color="Black" Opacity="0.6"></SolidColorBrush>
+            </Setter.Value>
+        </Setter>
+    </Style>
 
     <Style x:Key="SearchBox" TargetType="TextBox">
         <Setter Property="Background" Value="Transparent"/>
