--- a/Views/StartPageView.xaml
+++ b/Views/StartPageView.xaml
@@ -63,7 +63,8 @@
         <Grid Style="{DynamicResource BottomPanel}" Grid.Row="2">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <Button Style="{DynamicResource ButtonOne}" Grid.Row="1" Height="40" 
-                        Width="200" Content="История" Margin="0 0 40 0"/>
+                        Width="200" Content="История" Margin="0 0 40 0"
+                        Command="{Binding GoVid}"/>
                 <Button Style="{DynamicResource ButtonOne}" Grid.Row="1" Height="40" 
                         Width="200" Content="Загрузить" Command="{Binding LoadNewFile}"/>
             </StackPanel>
