--- a/Views/StartPageView.xaml
+++ b/Views/StartPageView.xaml
@@ -13,14 +13,14 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="52*"/>
-            <RowDefinition Height="337*"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
             <RowDefinition Height="60"/>
         </Grid.RowDefinitions>
 
 
         <Border Style="{DynamicResource SearchPanel}" CornerRadius="30" Height="50" 
-                Margin="40,0,40,0" VerticalAlignment="Center">
+                Margin="40,10,40,0" VerticalAlignment="Center">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1.1*"></ColumnDefinition>
