--- a/Views/MediaPage.xaml
+++ b/Views/MediaPage.xaml
@@ -25,9 +25,10 @@
             <Grid x:Name="MediaGrid" Grid.Row="0" Margin="15" HorizontalAlignment="Left">
                 <Border x:Name="MediaEl" CornerRadius="20" Height="{Binding Path=ActualHeight,ElementName=MediaGrid,Converter={StaticResource ScreenRatioHeightConvert}}" Width="{Binding Path=ActualHeight,ElementName=MediaGrid, Converter={StaticResource ScreenRatioConverter}}" BorderBrush="#414141" BorderThickness="2">
                     <Grid>
-                        <MediaElement></MediaElement>
+                        <ContentControl Content="{Binding Player}"></ContentControl>
+                        <MediaElement Source="{Binding Source={StaticResource ViewModelLocator}, Path=StartPageViewModel.SelectedMedia.Path}"></MediaElement>
                         <Grid>
-                            <Button Height="25" Width="25"></Button>
+                            <Button Height="25" Width="25" Command="{Binding PlayVideoCommand}"></Button>
                             <Grid VerticalAlignment="Bottom" Margin="20 0">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="auto"></ColumnDefinition>
