--- a/Views/MediaPage.xaml
+++ b/Views/MediaPage.xaml
@@ -23,18 +23,23 @@
                     <RowDefinition Height="0.2*"></RowDefinition>
                 </Grid.RowDefinitions>
 
-            <Grid x:Name="MediaGrid" Grid.Row="0" Margin="15" HorizontalAlignment="Left">
-                <Border x:Name="MediaEl" CornerRadius="20" Height="{Binding Path=ActualHeight,ElementName=MediaGrid,Converter={StaticResource ScreenRatioHeightConvert}}" Width="{Binding Path=ActualHeight,ElementName=MediaGrid, Converter={StaticResource ScreenRatioConverter}}" BorderBrush="#414141" BorderThickness="2">
-                    <Grid>
-                        <MediaElement></MediaElement>
+                <Grid x:Name="MediaGrid" Grid.Row="0" Margin="15" HorizontalAlignment="Left">
+                    <Border x:Name="MediaEl" CornerRadius="20" Height="{Binding Path=ActualHeight,ElementName=window,Converter={StaticResource ScreenRatioHeightConvert}}" Width="{Binding Path=ActualHeight,ElementName=window, Converter={StaticResource ScreenRatioConverter}}" BorderBrush="#414141" BorderThickness="2">
                         <Grid>
-                            <Button Height="25" Width="25"></Button>
-                            <Grid VerticalAlignment="Bottom" Margin="20 0">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="auto"></ColumnDefinition>
-                                    <ColumnDefinition Width="*"></ColumnDefinition>
-                                    <ColumnDefinition Width="auto"></ColumnDefinition>
-                                </Grid.ColumnDefinitions>
+                            <ContentControl Content="{Binding Player}"></ContentControl>
+                            <MediaElement Source="{Binding Source={StaticResource ViewModelLocator}, Path=StartPageViewModel.SelectedMedia}"></MediaElement>
+                            <Grid>
+                                <Button Height="25" Width="25" Command="{Binding PlayVideoCommand}">
+                                    <Button.Background>
+                                        <ImageBrush ImageSource="/Resources/Icons/pause.png"/>
+                                    </Button.Background>
+                                </Button>
+                                <Grid VerticalAlignment="Bottom" Margin="20 0">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="auto"></ColumnDefinition>
+                                        <ColumnDefinition Width="*"></ColumnDefinition>
+                                        <ColumnDefinition Width="auto"></ColumnDefinition>
+                                    </Grid.ColumnDefinitions>
 
                                     <StackPanel Orientation="Horizontal" Grid.Column="0">
                                         <Button Height="25" Width="25" Margin="0 0 20 0">
