--- a/Styles/DarkTheme.xaml
+++ b/Styles/DarkTheme.xaml
@@ -36,7 +36,7 @@
     <Style x:Key="ContentControlStyle" TargetType="ContentControl">
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="ContentControl">
+                <ControlTemplate TargetType="{x:Type ContentControl}">
                     <Border CornerRadius="20" Background="Black" ClipToBounds="True">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"></ContentPresenter>
                     </Border>
@@ -44,6 +44,7 @@
             </Setter.Value>
         </Setter>
     </Style>
+   
     <Style x:Key="ButtonOne" TargetType="Button">
         <Setter Property="Foreground" Value="White"/>
         <Setter Property="FontFamily" Value="/Resources/Fonts/#Montserrat"/>
