--- a/Views/MediaPage.xaml
+++ b/Views/MediaPage.xaml
@@ -27,10 +27,13 @@
                     <Border ClipToBounds="True" x:Name="MediaEl" CornerRadius="20" Height="{Binding Path=ActualHeight,ElementName=window,Converter={StaticResource ScreenRatioHeightConvert}}" Width="{Binding Path=ActualHeight,ElementName=window, Converter={StaticResource ScreenRatioConverter}}" BorderBrush="#414141" BorderThickness="2">
                         <Grid ClipToBounds="True">
 
-                            <ContentControl Content="{Binding Player}" Style="{DynamicResource ContentControlStyle}">
-                                
+                            <ContentControl Content="{Binding Player}">
+                                <ContentControl.Clip>
+                                    <RectangleGeometry RadiusX="20" RadiusY="20" Rect="{Binding Path=ActualHeight, ElementName=window, Converter={StaticResource ContentControlConverter}}"></RectangleGeometry>
+                                </ContentControl.Clip>
                             </ContentControl>
-                            <MediaElement Source="{Binding Source={StaticResource ViewModelLocator}, Path=StartPageViewModel.SelectedMedia}"></MediaElement>
+                           
+                            
                             <Grid>
                                 <Button Height="25" Width="25" Command="{Binding PlayVideoCommand}">
                                     <Button.Background>
